--- a/views/field_research.ejs
+++ b/views/field_research.ejs
@@ -8,6 +8,7 @@
     </head>
     <body>
         <div id="surface">
+            <% include partials/head.ejs %>
             <div class="container">
                 <br>
                 <div>
@@ -98,6 +99,7 @@
                 </div>
             </div>
         </div>
+        <% include partials/foot.ejs %>
         <script type="text/javascript" src="/js/tree.js"></script>
     </body>
 </html>
