--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,11 +7,13 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
-        <div id="surface">
+        <div id="surface home">
             <div id="header">
                 <div class="container clear-fix">
-                    <a href="localhost:8000" id="logo-page">
-                        <span id="header-logo"></span>
+                    <a href="/" id="logo-page">
+                        <span id="header-logo">
+                            <img id="logo" src="/image/logo.png">
+                        </span>
                     </a>
                     <div id="header-user">
                         <form action="/signin" method="post">
@@ -47,33 +49,42 @@
                     </div>
                 </div>
             </div>
-            <div class="container clear-fix">
-                <ul id="main-content">
-                    <br>
-                    <div>
-                        <h1 id="slogan">Trang thông tin giảng viên</h1>
+                <div class="container clear-fix">
+                    <div id="main-content">
+                        <br>
+                        <div>
+                            <h1 id="slogan">Trang thông tin giảng viên</h1>
+                        </div>
+                        <br>
+                        <nav class="navbar navbar-expand-sm bg-light">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="">Tìm kiếm</a>
+                                </li>
+                            </ul>
+                        </nav>
+                        <br>
+                        <div class="jumbotron">
+                            <p>
+                                <p style="font-weight: 800;">Bản cập nhật ngày 24/05/2019:</p>
+                                    1. Cập nhật giao diện:<br>
+                                    <br>
+                                        - Color<br>
+                                        - Logo<br>
+                                        - Icon<br>
+                                    <br>
+                                    2. Phân quyền:<br>
+                                    <br>
+                                        - Kiểm tra đăng nhập<br>
+                                        - Kiểm tra quyền<br>
+                                    <br>
+                                <p style="font-weight: 800;">To be continued...</p>
+                            </p>
+                        </div>
                     </div>
-                    <br>
-                    <div class="form-group has-search">
-                        <input type="text" class="form-control" placeholder="Bạn muốn tìm kiếm gì?...">
-                    </div>
-                    <br>
-                    <br>
-                    <nav class="navbar navbar-expand-sm bg-light">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link" href="unit">Đơn vị</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="field_research">Lĩnh vực nghiên cứu</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="employee">Giảng viên</a>
-                            </li>
-                        </ul>
-                    </nav>
                 </div>
             </div>
         </div>
+        <%include partials/foot.ejs%>
     </body>
 </html>
