--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,36 +10,7 @@
 
 <body>
     <div id="surface home">
-        <div id="header">
-            <div class="container clear-fix">
-                <a href="/" id="logo-page">
-                    <span id="header-logo">
-                        <img id="logo" src="/image/logo.png">
-                    </span>
-                </a>
-                <div id="header-user">
-                    <table id=login>
-                        <tbody>
-                            <tr>
-                                <th></th>
-                                <th></th>
-                            </tr>
-                            <tr>
-                                <th style="font-weight: bold; color: #fff;">Xin chào, <a href="/profile"><%= name %></a></th>
-                                <th>
-                                    <form action="/logout" method="POST">
-                                        <button class="btn btn-success" type="submit">Đăng xuất</button>
-                                    </form>
-                                </th>
-                            </tr>
-                            <tr>
-                            </tr>
-                        </tbody>
-                    </table>
-                    </form>
-                </div>
-            </div>
-        </div>
+        <% include partials/head.ejs %>
         <div class="slider-container">
             <div class="container clear-fix">
                 <ul id="main-content">
