--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
             <div class="container clear-fix">
                 <div id="main-content">
                     <br>
-                    <div>
+                    <div id="banner">
                         <h1 id="slogan">TRANG THÔNG TIN GIẢNG VIÊN</h1>
                     </div>
                     <br>
@@ -32,13 +32,39 @@
                             <a href="employee"><img src="/image/lecture.png"></a>
                         </span>
                         <span class="select rounded-lg">
-                            <a href=""><img src="/image/search.png"></a>
+                            <a href="/search-unit"><img src="/image/search.png"></a>
                         </span>
                     </div>
                     <br>
                     <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>  
                     <% } else { %>
-                    <button class="btn btn-warning" style="margin: auto; display: block;">Tìm kiếm</button>
+                    <form action="/search-unit" method="get">
+                        <button type="submit" class="btn btn-warning" style="margin: auto; display: block;">Tìm kiếm</button>
+                    </form>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
                     <br>
                     <br>
                     <% } %>
