--- a/views/login.ejs
+++ b/views/login.ejs
@@ -66,6 +66,7 @@
                     </div>
                 </div>
             </div>
+            <div class="slider-container">
                 <div class="container clear-fix">
                     <div id="main-content">
                         <br>
@@ -73,7 +74,9 @@
                             <h1 id="slogan">TRANG THÔNG TIN GIẢNG VIÊN</h1>
                         </div>
                         <br>
-                        <button class="btn btn-warning" style="margin: auto; display: block;">Tìm kiếm</button>
+                        <form action="/search-unit" method="get">
+                            <button type="submit" class="btn btn-warning" style="margin: auto; display: block;">Tìm kiếm</button>
+                        </form>
                         <br>
                         <div class="jumbotron">
                             <p>
@@ -83,6 +86,8 @@
                                         - Thông báo sai mật khẩu/tài khoản chưa tồn tại<br>
                                         - Logo<br>
                                     <br>
+                                    2. Giao diện:<br>
+                                        - Hiển ảnh slide ở trang chủ<br>
                                 <p style="font-weight: 800;">To be continued...</p>
                             </p>
                         </div>
