--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,6 +14,35 @@ ul, li {
 button:hover {
     opacity: 0.8;
 }
+.slider-container {
+    animation-name: slide;
+    animation-duration: 20s;
+    animation-iteration-count: infinite;
+    background-position: center center;  
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+}
+@keyframes slide {
+    0% {
+        background-image: url("/image/background1.jpg");
+    }
+    20% {
+        background-image: url("/image/background2.jpg");
+    }
+    40% {
+        background-image: url("/image/background3.jpg");
+    }
+    60% {
+        background-image: url("/image/background1.jpg");
+    }
+    80% {
+        background-image: url("/image/background2.jpg");
+    }
+    100% {
+        background-image: url("/image/background3.jpg");
+    }
+}
 .container {
     max-width: 1140px;
     margin: auto;   
@@ -48,9 +77,11 @@ table#login tbody tr th {
 }
 label[for="username-input"] {
     margin: 0;
+    color:#fff;
 }
 label[for="password-input"] {
     margin: 0;
+    color:#fff; 
 }
 #forgot-password {
     display: block;
@@ -61,6 +92,9 @@ label[for="password-input"] {
 #slogan {
     font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
     text-align: center;
+    font-weight: 800;
+    font-size: 50px;
+    color: rgb(0, 134, 0);
 }
 span.select {
     display: inline-block;
@@ -92,6 +126,7 @@ label {
     font-weight: bold; 
 }
 .create-label {
+    left: 0;
     width: 120px;
 }
 .create-label ~ input {
@@ -117,6 +152,12 @@ label {
 }
 .field-option {
     right: 0px;
+}
+#field-list1 {
+    padding: 20 20px;
+    margin-top: -17px;
+    border: 2px solid black;
+    width: 298px;
 }
 /* Pop up Form */
 .modal {
@@ -181,3 +222,54 @@ thead tr {
 .interactive {
     text-align: center;
 }
+
+
+/* SEARCH PAGE */
+#table-unit {
+    position:absolute;
+      width:620px;
+      height:75px;
+  
+      top: 23%;
+      left:38%;
+  }
+.tab-wrapper{
+    width: 400px;
+    margin: 0 0 0 100px;
+}
+.tab-wrapper ul{
+    list-style: none;
+    padding: 0;
+    /* margin: 0 0 0 80px; */
+}
+.tab-wrapper ul.tab li {
+    display: inline-block;
+    border: solid;
+    border-width: 2px;
+    margin: 0 10px 0 0;
+}
+.tab-wrapper ul li.active{
+    background: #9BCA3B;
+}
+.tab-wrapper ul li.active a{
+    color: black;
+}
+.tab-wrapper ul li a{
+    color: #000;
+    padding: 0 10px;
+}
+ul[class="hoho"] li a {
+    margin-left: 80px;
+}
+.tab-wrapper ul.hoho li{
+    margin-left: -80px;
+}
+.tab-content{
+    padding: 5px;
+    /* margin: 0 0 0 75px; */
+}
+.tab-item {
+    display: none;
+    margin: 0;
+}
+  
